--- a/prototype/style.css
+++ b/prototype/style.css
@@ -5,6 +5,26 @@ body {
   text-align: center;
   padding: 0;
   margin: 0;
+  color: white;
+}
+
+.header-info {
+  font-family: 'Bree Serif', serif;
+  width: 100%;
+  height: 500px;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: left;
+}
+
+.header-info h1 {
+  margin-left: 150px;
+  margin-top: 10px;
+  font-size: 120px;
+  opacity: 0.3;
 }
 
 .header {
@@ -15,7 +35,7 @@ body {
   margin: 0;
   background-size: cover;
   background-position: center;
-  opacity: 0.2;
+  opacity: 0.3;
 }
 
 .header:after {
